--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,17 +1,17 @@
 Name: julia
 Cartridge-Short-Name: julia
-Cartridge-Version: '0.0.1'
+Cartridge-Version: '0.0.2'
 Display-Name: "Julia Cartridge"
 Description: "julia cartridge"
 Source-Url: https://github.com/codeneomatrix/julia-cartridge.git
-Cartridge-Vendor: ivandavid
-Version: '0.3.10'
+Cartridge-Vendor: codeneomatrix
+Version: '0.4.2'
 Categories:  
   - service
   - web_framework
 Provides:
   - julia
-  - julia-v0.3.10
+  - julia-v0.4.2
 Endpoints:
   - Private-IP-Name: IP
     Private-Port-Name: PORT
