--- a/bin/control
+++ b/bin/control
@@ -12,15 +12,15 @@ function catchall() {
 
 function start() {
   if is_running; then
-    echo "application $OPENSHIFT_APP_NAME is already running"
+    client_result "application $OPENSHIFT_APP_NAME is already running"
     exit 1
   fi
   cd $OPENSHIFT_REPO_DIR
-  echo "Starting $OPENSHIFT_APP_NAME"
+  client_message "Starting $OPENSHIFT_APP_NAME"
   nohup julia server.jl >/dev/null 2>&1 &
   npid=$(ps -eo pid,command | grep "server.jl" | grep -v grep | awk '{print $1}')
-  echo "$npid" > "$pid_file"
-  echo "started $OPENSHIFT_APP_NAME"
+  client_message "$npid" > "$pid_file"
+  client_result "started $OPENSHIFT_APP_NAME"
 }
 
 
@@ -63,11 +63,11 @@ function is_running() {
 
 function status() {
   if is_running; then
-      echo "$OPENSHIFT_APP_NAME running"
-      return 0
+      client_result "$OPENSHIFT_APP_NAME running"
+      #return 0
   fi
-  echo "$OPENSHIFT_APP_NAME not-running"
-  return 1
+  client_result "$OPENSHIFT_APP_NAME not-running"
+  #return 1
 }
 
 
@@ -91,4 +91,4 @@ case "$1" in
   *)           exit 0
 esac
 
-exit 0
+#exit 0
