--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -3,8 +3,8 @@ Cartridge-Short-Name: julia
 Cartridge-Version: '0.0.2'
 Display-Name: "Julia Cartridge"
 Description: "julia cartridge"
-Source-Url: https://github.com/codeneomatrix/julia-cartridge.git
-Cartridge-Vendor: ivandavid_codeneomatrix
+Source-Url: https://github.com/elcritch/julia-cartridge.git
+Cartridge-Vendor: ivandavid_elcritch
 Version: '0.4.3'
 Categories:  
   - service
