--- a/bin/control
+++ b/bin/control
@@ -39,7 +39,9 @@ function stop() {
     npid=$(cat $pid_file 2> /dev/null)
     if [ -n "$npid" ]; then
       client_message "stopping $OPENSHIFT_APP_NAME"
-      kill "$npid" 2> /dev/null
+      if (( is_running() > 0 )); then
+        kill "$npid" 2> /dev/null
+      fi
     fi
   else
     npid=$(ps -eo pid,command | grep "server.jl" | grep -v grep | awk '{print $1}')
@@ -51,6 +53,7 @@ function stop() {
   client_message "$OPENSHIFT_APP_NAME application stopped"
   rm -f $pid_file
 }
+
 
 
 function restart() {
